s3/errors.txt
error1.c:6:1: error: expected '}'
^
error1.c:4:1: note: to match this '{'
{
^
1 error generated.
error1.c:6:1: error: expected '}'
^
error1.c:4:1: note: to match this '{'
{
^
1 error generated.
error1.c:6:1: error: expected '}'
^
error1.c:4:1: note: to match this '{'
{
^
1 error generated.
error1.c:6:1: error: expected '}'
^
error1.c:4:1: note: to match this '{'
{
^
1 error generated.
error1.c:6:1: error: expected '}'
^
error1.c:4:1: note: to match this '{'
{
^
1 error generated.
error1.c:6:1: error: expected '}'
^
error1.c:4:1: note: to match this '{'
{
^
1 error generated.
xcode-select: Failed to locate 'Example.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'great5.c.txt.txt.txt.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'Example.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'Example.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'error1.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'Example.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'great5.c.txt.txt.txt.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'Example.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'Example.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'error1.c', requesting installation of command line developer tools.
Error in: main
Error in: main
Error in: main
Error in: main
Error in: main
xcode-select: Failed to locate 'Example.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'great5.c.txt.txt.txt.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'Example.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'Example.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'error1.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'Example.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'great5.c.txt.txt.txt.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'Example.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'Example.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'error1.c', requesting installation of command line developer tools.
error1.c:6:1: error: expected '}'
^
error1.c:4:1: note: to match this '{'
{
^
1 error generated.
error1.c:6:1: error: expected '}'
^
error1.c:4:1: note: to match this '{'
{
^
1 error generated.
Error in: main
clang: error: no such file or directory: 'Example.c'
clang: error: no input files
a.out(9932,0x11086ce00) malloc: *** error for object 0x7f956700b000: pointer being freed was not allocated
a.out(9932,0x11086ce00) malloc: *** set a breakpoint in malloc_error_break to debug
error1.c:6:1: error: expected '}'
^
error1.c:4:1: note: to match this '{'
{
^
1 error generated.
Error in: main
error1.c:6:1: error: expected '}'
^
error1.c:4:1: note: to match this '{'
{
^
1 error generated.
Error in: main
error1.c:6:1: error: expected '}'
^
error1.c:4:1: note: to match this '{'
{
^
1 error generated.
Error in: main
